phpmyadmin-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: phpmyadmin-pod
spec:
  containers:
  - name: phpmyadmin-container
  image: phpmyadmin/phpmyadmin
  ports:
  - containerPort: 80
