ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
spec:
  rules:
  - host: phpmyadmin.mondomaine.com
	http:
  	paths:
  	- path: /
    	pathType: Prefix
    	backend:
      	service:
        	name: phpmyadmin-service
        	port:
          	name: http
